--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -9,17 +9,16 @@
 -------------------------------------*/
 
 .FeedList {
-  margin-left: 25px;
-  margin-right: 25px;
+  margin: auto;
 }
 
 .FeedWidget {
-  width: 590px;
+  width: 600px;
   background-color: #FFFFFF;
   border-bottom: 1px solid #DADADA;
   overflow: hidden;
 }
-
+    
 .FeedBasic {
   font-size: 12px;
   padding: 3px;
@@ -27,9 +26,8 @@
 
 .FeedDate {
   font-size: 12px;
-  font-weight: bold;
   border-bottom: 1px solid #AAAAAA;
-  padding-top: 10px;
+  padding: 5px 0;
 }
 
 .FeedWidget .IconContainer {
@@ -57,6 +55,12 @@
 .FeedWidget .FeedIcon {
   width: 30px;
   height: 20px;
+}
+
+.FeedShowMore {
+  text-align: right;
+  font-size: 12px;
+  margin-top: 10px;
 }
 
 /* ------------------------------------
