Add a link to compose mail on the inbox screen.

--- a/src/gwt/public/mail/mail.css
+++ b/src/gwt/public/mail/mail.css
@@ -8,6 +8,12 @@
   padding: 10px;
 }
 
+.mail .ComposeLink a {
+  margin-left: 10px;
+  font-size: 14px;
+  color: #194C70;
+}
+
 .mail .MailHeader {
   background: url(/images/mail/header_bg.png) no-repeat top left;
   width: 678px;
