Wooo!! Sexyblack windows everywhere! Except the Friends Panel, which was born during a period of transition and retains a special header and style. The last holdout was the room editing panel, but a few minor tweaks and it's happy. Some of the advanced icons are still black, but an artist can fix those up...

--- a/src/as/com/threerings/msoy/applets/applets.css
+++ b/src/as/com/threerings/msoy/applets/applets.css
@@ -10,7 +10,7 @@
   fontSize: 12;
 }
 
-/** Hack: Copied from oldCheckBox instead of setting styleNames everywhere */
+/** We must override these buttons to work on non-sexyblack backgrounds. */
 CheckBox, RadioButton {
     borderColor: #403424;
     highlightAlphas: 0, 0;
