--- a/src/as/com/threerings/msoy/applets/applets.css
+++ b/src/as/com/threerings/msoy/applets/applets.css
@@ -10,8 +10,7 @@
   fontSize: 12;
 }
 
-/** We must override these buttons to work on non-sexyblack backgrounds. */
-CheckBox, RadioButton {
+.oldCheckBox {
     borderColor: #403424;
     highlightAlphas: 0, 0;
     fillAlphas: 0, 0, 0.75, 0.65;
