--- a/src/gwt/public/me/me.css
+++ b/src/gwt/public/me/me.css
@@ -49,9 +49,11 @@
     width: 460px;
 }
 
-.myWhirled .FeedBox .FeedDate {
+.myWhirled .FeedBox .FeedCategoryHeader {
+  font-size: 13px;
+  padding: 10px 0 5px 0;
   background-color: #d8d8d8;
-  border-bottom: none;
+  color: #333333;
 }
 
 .myWhirled .FeedBox .FeedShowMore {
