Quick fix for trophies on the me page.

--- a/src/gwt/public/person/person.css
+++ b/src/gwt/public/person/person.css
@@ -47,6 +47,10 @@
   overflow: hidden;
 }
 
+.FeedWidget .ThumbnailWidget {
+  padding: 5px;
+}
+
 .FeedWidget .ThumbnailContainer {
   height: 32px;
   vertical-align: middle;
