Set explicit width on the star bar to prevent it from breaking even when abused by parent tables.

--- a/src/gwt/public/global/gwt.css
+++ b/src/gwt/public/global/gwt.css
@@ -740,6 +740,14 @@ img, embed, applet, object {
   padding: 0px;
 }
 
+.stars {
+  width: 80px;
+}
+
+.starsSmall {
+  width: 50px;
+}
+
 .stars img {
   display: inline;
 }
