--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -4,18 +4,32 @@
  * Our Flash client style sheet. Abandon hope all ye who enter here.
  */
 
+/* Only encode A-Z,a-z,0-9, and period. */
 /*
 @font-face {
   fontFamily: "Trebuchet";
   advancedAntiAliasing: true;
   src: url("../../rsrc/fonts/trebuc.ttf");
+  unicodeRange:
+    U+0041-U+005A,
+    U+0061-U+007A,
+    U+0030-U+0039,
+    U+002E-U+002E;
 }
+*/
 
+/* Only encode A-Z,a-z,0-9, and period. */
+/*
 @font-face {
   fontFamily: "Trebuchet";
   advancedAntiAliasing: true;
-  fontWeight: "bold";
+  fontWeight: bold;
   src: url("../../rsrc/fonts/trebucbd.ttf");
+  unicodeRange:
+    U+0041-U+005A,
+    U+0061-U+007A,
+    U+0030-U+0039,
+    U+002E-U+002E;
 }
 
 global {
