Because flash and flex are such giant piles of shit, just break out the link into a separate component, using a CommandLinkButton so that we can get underlined text. Oh, I tried creating a BetterText class that exposed the inner TextField, but it turns out that's not created until createChildren (sensible), which makes it hard to style. I further modified that to set up a special stylesheet on that TextField and that worked *but negated all the normal styles inherited through flex*. Fuck that, so I just undid everything except my frustration and did things the stupid way.

--- a/src/as/msoy.css
+++ b/src/as/msoy.css
@@ -380,6 +380,11 @@ TabNavigator, TabBar {
   selectedTabTextStyleName: "selectedMsoyTabButton";
 }
 
+.shareLink {
+  color: white;
+  textDecoration: underline;
+}
+
 .msoyTabButton {
   color: #b4cbd7;
   fontFamily: Arial;
